--- a/Home.html
+++ b/Home.html
@@ -148,6 +148,100 @@
 
     </div>
 
+    <nav class="menu_right">
+
+        <div class="searching_box"></div>
+
+        <div class="might_like">
+
+            <div class="subtitle">
+                <h1>You might like</h1>
+            </div>
+
+            <div class="might_like_x">
+
+                <div class="follow_btn_menu">
+
+                    <div>
+                        <a href="">
+                            <h2>Follow</h2>
+                        </a>
+                    </div>
+
+                </div>
+
+                <div class="profil_img">
+
+                    <div><a href=""><img src="image/2c9f9d21872908d495b82df8168e57c7.png" alt=""></a></div>
+
+                </div>
+
+                <div class="might_like_content">
+
+                    <h3>jeeirjoeij</h3>
+                    <p>kfoijoeijoijoikrelln</p>
+
+                </div>
+            </div>
+
+            <div class="might_like_x">
+
+                <div class="follow_btn_menu">
+
+                    <div>
+                        <a href="">
+                            <h2>Follow</h2>
+                        </a>
+                    </div>
+
+                </div>
+
+                <div class="profil_img">
+
+                    <div><a href=""><img src="image/2c9f9d21872908d495b82df8168e57c7.png" alt=""></a></div>
+
+                </div>
+
+                <div class="might_like_content">
+
+                    <h3>jeeirjoeij</h3>
+                    <p>kfoijoeijoijoikrelln</p>
+
+                </div>
+            </div>
+
+            <div class="might_like_x">
+
+                <div class="follow_btn_menu">
+
+                    <div>
+                        <a href="">
+                            <h2>Follow</h2>
+                        </a>
+                    </div>
+
+                </div>
+
+                <div class="profil_img">
+
+                    <div><a href=""><img src="image/2c9f9d21872908d495b82df8168e57c7.png" alt=""></a></div>
+
+                </div>
+
+                <div class="might_like_content">
+
+                    <h3>jeeirjoeij</h3>
+                    <p>kfoijoeijoijoikrelln</p>
+
+                </div>
+            </div>
+
+        </div>
+
+
+    </nav>
+
+
 
 </body>
 
